# MonitorCLion

./: .gitignore  CMakeLists.txt  check.py  cpyIncludes.sh  cpySource.sh  lnkInc.bat  mkLink.bat  symbols.py
LatheCPP/lathe_src/: i2cx.cpp  lcd.cpp  spix.cpp  stm32Info.cpp
MonitorCPPN/Src/: adc.c  gpio.c
cores/: CMakeLists.txt  files.txt
cores/arduino/: HardwareTimer.cpp
libraries/: CMakeLists.txt
monitor/src/: monitor.cpp
stm32f103/: CMakeLists.txt
